# genmus

./: genmus.cabal  genmus.sublime-project  hello.midi  new.midi  stack.yaml  symreg.cabal
app/: Main.hs  untitled.sublime-project
bench/: Main.hs
src/: MML.hs
src/Data/: Genetics.hs  Music.hs  SymReg.hs
src/Data/Genetics/: Class.hs  Core.hs
src/Data/Music/: Music.hs
src/Data/SymReg/: AST.hs  Evolvable.hs  Functions.hs  Misc.hs  Parser.hs
test/: Spec.hs
test/Test/Data/SymReg/: AST.hs  Parser.hs
