name:                symreg
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/symreg#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     
                       Data.Genetics
                       Data.Genetics.Class
                       Data.Genetics.Core
                       Data.SymReg
                       Data.SymReg.AST
                       Data.SymReg.Evolvable
                       Data.SymReg.Functions
                       Data.SymReg.Misc
                       Data.SymReg.Parser

  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , MonadRandom
                     , attoparsec
                     , deepseq >= 1.4.1.1

  default-extensions:  RecordWildCards
                       OverloadedStrings
                       DeriveGeneric
  
executable symreg
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , symreg

test-suite test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    test
  ghc-options:       -Wall
  default-language:  Haskell2010

  default-extensions:  RecordWildCards
                       OverloadedStrings
  
  other-modules:     Test.Data.SymReg.Parser
                     Test.Data.SymReg.AST
                     
  build-depends:       base >= 4.7 && < 5
                     , symreg
                     , HUnit
                     , QuickCheck
                     , quickcheck-instances
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , text

benchmark bench-symreg
  type:              exitcode-stdio-1.0
  hs-source-dirs:    bench
  main-is:           Main.hs
  build-depends:      base
                    , symreg
                    , criterion >= 1.1.0.0
                    , deepseq >= 1.4.1.1
  ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N